--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
 body {
   font-family: sans-serif;
 }
-
+button{
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
 /* Make content area fill the entire browser window */
 html,
 .fullscreen {
@@ -10,14 +18,124 @@ html,
   margin: 0;
   padding: 0;
   width: 100%;
+  background-color: #071013;
 }
 
 /* Center the content in the browser window */
 .container {
   margin: auto;
-  text-align: center;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr ;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 100px;
 }
 
-.title {
-  font-size: 3rem;
+.top-left{
+  grid-columns: 1;
+  grid-row: 1:
 }
+
+.top-right{
+  grid-columns: 2;
+  grid-row: 1:
+}
+
+.bottom-left{
+  grid-columns: 1;
+  grid-row: 2:
+}
+
+.bottom-right{
+  grid-columns: 2;
+  grid-row: 2:
+}
+
+.gamebutton {
+  width: 90px;
+  height: 90px;
+  border-radius: 400px;
+}
+
+#blue {
+  border: 4px solid #1A8FE3; 
+}
+
+#purple {
+  border: 4px solid #6610F2; 
+}
+
+#red {
+  border: 4px solid #D11149; 
+}
+
+#orange {
+  border: 4px solid #F17105; 
+}
+
+#blue:hover {
+  background-color: #1A8FE3;
+}
+
+#purple:hover {
+  background-color: #6610F2;
+}
+
+#red:hover {
+  background-color: #D11149;
+}
+
+#orange:hover {
+  background-color: #F17105;
+}
+/* #moncercle1{
+  background:#bfd70e;
+  border-radius:50%;
+  width:80px;
+  height:80px;
+  border:2px solid #679403; 
+
+  grid-column:1;
+  grid-row:1;
+}
+
+#moncercle2{
+  background:#bfd70e;
+  border-radius:50%;
+  width:80px;
+  height:80px;
+  border:2px solid #679403; 
+
+  grid-column:2;
+  grid-row:1;
+}
+#moncercle3{
+  background:#bfd70e;
+  border-radius:50%;
+  width:80px;
+  height:80px;
+  border:2px solid #679403; 
+
+  grid-column:3;
+  grid-row:1;
+}
+#moncercle4{
+  background:#bfd70e;
+  border-radius:50%;
+  width:80px;
+  height:80px;
+  border:2px solid #679403; 
+
+  grid-column:4;
+  grid-row:1;
+}
+#moncercle5{
+  background:#bfd70e;
+  border-radius:50%;
+  width:80px;
+  height:80px;
+  border:2px solid #679403; 
+
+  grid-column:5;
+  grid-row:1;
+} */
