--- a/css/style.css
+++ b/css/style.css
@@ -1,141 +1,79 @@
 body {
   font-family: sans-serif;
 }
-button{
-  background: none;
-  color: inherit;
-  border: none;
-  padding: 0;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
-}
 /* Make content area fill the entire browser window */
 html,
+
+
 .fullscreen {
-  display: flex;
   height: 100%;
   margin: 0;
   padding: 0;
   width: 100%;
-  background-color: #071013;
+  background: #071013;
 }
 
 /* Center the content in the browser window */
 .container {
-  margin: auto;
-  display: grid;
-  align-items: center;
-  grid-template-columns: 1fr 1fr ;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 100px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.top-left{
-  grid-columns: 1;
-  grid-row: 1:
+.cercle {
+  opacity: 1.0;
+  transition: 0.1s;
+	width: 100px;
+  height: 100px;
+  border-radius:50%;
+  margin: 35px;
 }
 
-.top-right{
-  grid-columns: 2;
-  grid-row: 1:
+.cercle:hover {
+	transform: scale(1.2);
 }
 
-.bottom-left{
-  grid-columns: 1;
-  grid-row: 2:
+.cercle:active {
+  background-color: white;
 }
 
-.bottom-right{
-  grid-columns: 2;
-  grid-row: 2:
+.cercle.active {
+  background-color: white;
 }
 
-.gamebutton {
-  width: 90px;
-  height: 90px;
-  border-radius: 400px;
-}
-
-#blue {
+.blue {
   border: 4px solid #1A8FE3; 
 }
 
-#purple {
+.purple {
   border: 4px solid #6610F2; 
 }
 
-#red {
+.red {
   border: 4px solid #D11149; 
 }
 
-#orange {
+.orange {
   border: 4px solid #F17105; 
 }
 
-#blue:hover {
-  background-color: #1A8FE3;
+button {
+	min-width: 120px;
+	background: white;
+	border-radius: 10px;
+	text-align: center;
+  transition: 0.3s;
+  border: 0;
 }
 
-#purple:hover {
-  background-color: #6610F2;
+.buttons {
+	width: 100%;
+	float: left;
+	text-align: center;
 }
 
-#red:hover {
-  background-color: #D11149;
+h1 {
+	text-align: center;
+	font-size: 50px;
+	color: white;
 }
-
-#orange:hover {
-  background-color: #F17105;
-}
-/* #moncercle1{
-  background:#bfd70e;
-  border-radius:50%;
-  width:80px;
-  height:80px;
-  border:2px solid #679403; 
-
-  grid-column:1;
-  grid-row:1;
-}
-
-#moncercle2{
-  background:#bfd70e;
-  border-radius:50%;
-  width:80px;
-  height:80px;
-  border:2px solid #679403; 
-
-  grid-column:2;
-  grid-row:1;
-}
-#moncercle3{
-  background:#bfd70e;
-  border-radius:50%;
-  width:80px;
-  height:80px;
-  border:2px solid #679403; 
-
-  grid-column:3;
-  grid-row:1;
-}
-#moncercle4{
-  background:#bfd70e;
-  border-radius:50%;
-  width:80px;
-  height:80px;
-  border:2px solid #679403; 
-
-  grid-column:4;
-  grid-row:1;
-}
-#moncercle5{
-  background:#bfd70e;
-  border-radius:50%;
-  width:80px;
-  height:80px;
-  border:2px solid #679403; 
-
-  grid-column:5;
-  grid-row:1;
-} */
